--- a/assets/style.css
+++ b/assets/style.css
@@ -9,10 +9,10 @@
 .header{
     width: 100%;
     height: 80px;
-    background-color: lightblue;
+    background-color: lightblue; /*make color darker*/
     text-align: center;
 }
-#title{
+.title{
     font-size: 50px;
     color: white;
     font-family:Verdana, Geneva, Tahoma, sans-serif
@@ -21,9 +21,49 @@
     display: inline-block;
     width: 30%;
     background-color: blueviolet;
+    padding-left: 10px;
+    padding-top: 20px;
+    vertical-align: top;
 }
 .right{
     display: inline-block;
     width: 68%;
     background-color:aquamarine;
+    padding-left: 10px;
+    padding-top: 20px;
+    vertical-align: top;
+}
+.header2{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+}
+.city{
+    width: 95%;
+    padding: 7px;
+    border-radius: 5px;
+    margin-top: 10px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.searchBtn{
+    width:95%;
+    padding: 4px;
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: lightblue; /*make color darker*/
+    color: white;
+    font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+#historyItem{ /*change to .archievedItems */
+    width:95%;
+    padding: 7px;
+    border-radius: 5px;
+    margin: 0;   
+    margin-top: 10px;
+    margin-bottom: 5px;
+    background-color: lightblue;
+    color: black;
+    font-size: 15px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
