--- a/assets/style.css
+++ b/assets/style.css
@@ -55,7 +55,7 @@
     font-size: 20px;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
-#historyItem{ /*change to .archievedItems */
+.archievedItems{
     width:95%;
     padding: 7px;
     border-radius: 5px;
